# airbnb-analyzer

./: .gitignore  README.md  airbnb_eda.ipynb  hello.py  pyproject.toml
api/: AirBnB.py
data/: airbnb-dummy-data-full.csv
streamlit/: README.md  app.py
streamlit/scripts/: graphs.py  process_file.py
