[project]
name = "django-airbnb-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Jay Cruz", email = "jcmcruz14@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "jupyter",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
django = [
  "django>=5.1.4"
]
streamlit = [
  "streamlit",
  "altair"
]